--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,9 @@
               }
             ],
             "styles": [
+            "node_modules/primeicons/primeicons.css",
               "src/styles.scss"
-            ],
+             ],
             "scripts": []
           },
           "configurations": {
